# WebSocket-Chat-

./: CMakeLists.txt  README.md
example/: frkChatClient.cpp  frkChatServer.cpp
include/: frkClient.h  frkNodeV4.h  frkServer.h
lib/include/: frkClient.h  frkNodeV4.h  frkServer.h
lib/src/: frkClient.cpp  frkServer.cpp
src/: frkChatClient.cpp  frkClient.cpp  frkNodeV4.cpp  frkServer.cpp
